--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <h1>Calculator</h1>
+    <div class="container">
+        <div class="calc-pane">
+            <p>Enter a number...</p>
+        </div>
+        <div class="calculator">
+            <div class="calc-numbers">
+                <div class="top-three">
+                    <button class="number">7</button>
+                    <button class="number">8</button>
+                    <button class="number">9</button>
+                </div>
+                <div class="mid-three">
+                    <button class="number">4</button>
+                    <button class="number">5</button>
+                    <button class="number">6</button>
+                </div>
+                <div class="bottom-three">
+                    <button class="number">1</button>
+                    <button class="number">2</button>
+                    <button class="number">3</button>
+                </div>
+            </div>
+            <div class="calc-actions">
+                <button class="add">+</button>
+                <button class="subtract">-</button>
+                <button class="multiply">*</button>
+                <button class="divid">/</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
